# cc.ublox.commsdsl

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  CopyGenerated.cmake  README.md  basic_msgs.txt  readme.generated
.github/workflows/: actions_build.yml
cmake/: CC_Prefetch.cmake
dsl/: main.xml
dsl/field/: cfgval.xml  common-cfg.xml  common.xml
dsl/message/: Ack.xml  AidAlm.xml  AidAlp.xml  AidAlpsrv.xml  AidAop.xml  AidData.xml  AidEph.xml  AidHui.xml  AidIni.xml  AidReq.xml  CfgAnt.xml  CfgCfg.xml  CfgDat.xml  CfgDgnss.xml  CfgDosc.xml  CfgDynseed.xml  CfgEkf.xml  CfgEsfgwt.xml  CfgEsrc.xml  CfgFixseed.xml  CfgFxn.xml  CfgGeofence.xml  CfgGnss.xml  CfgHnr.xml  CfgInf.xml  CfgItfm.xml  CfgLogfilter.xml  CfgMsg.xml  CfgNav5.xml  CfgNavx5.xml  CfgNmea.xml  CfgNvs.xml  CfgOdo.xml  CfgPm.xml  CfgPm2.xml  CfgPms.xml  CfgPrt.xml  CfgPwr.xml  CfgRate.xml  CfgRinv.xml  (+113 more)
examples/: CMakeLists.txt
examples/common/include/common/: boost_wrap.h
examples/simple_pos/: CMakeLists.txt  ProgramOptions.cpp  ProgramOptions.h  Session.cpp  Session.h  main.cpp
script/: appveyor_install.bat  full_build.sh  full_debug_build.sh  full_debug_build_basic.sh  full_debug_build_basic_clang.sh  full_debug_build_basic_gcc.sh  full_release_build.sh  prepare_externals.bat  prepare_externals.sh  protocol_debug_build.sh  protocol_debug_build_clang.sh
src/c/: README.md
src/cc_plugin/: CMakeLists.txt.append
src/emscripten/: README.md
src/include/cc_ublox/field/: CfgValPairSimple.h.inc  CfgValPairSimple.h.private
src/include/cc_ublox/message/: AidIni.h.read  CfgTp5.h.refresh
src/include/ublox/field/: CfgValPair.h.inc  CfgValPair.h.read  CfgValPairSimple.h.public
src/include/ublox/frame/checksum/: UbloxChecksum.h
src/include/ublox/message/: AidIni.h.inc  AidIni.h.private  CfgTmode3.h.private  CfgTmode3.h.read  CfgTmode3.h.refresh  CfgTp5.h.private  CfgTp5.h.read  EsfMeas.h.private  EsfMeas.h.read  EsfMeas.h.refresh
src/latex/: README.md
src/protocol/: README.md
src/protocol/include/cc_ublox/field/: CfgValPairSimple.h.read  CfgValPairSimple.h.refresh
src/protocol/include/cc_ublox/frame/checksum/: UbloxChecksum.h
src/protocol/include/cc_ublox/message/: AidIni.h.refresh
src/swig/: CMakeLists.txt.append  CMakeLists.txt.prepend_lang  README.md
src/test/: README.md
src/tools/: README.md
swig_src/: CMakeLists.txt.prepend
